# study-machine-learning

./: .gitignore  README.md
deep-learning-with-python/: README.md  pyproject.toml
deep-learning-with-python/chapter1/: section1.ipynb
deep-learning-with-python/chapter2/: section1.ipynb
docs/: memo.md
